// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListenCard renders correctly 1`] = `
<ListenCard
  currentFeedback={1}
  listen={
    Object {
      "listened_at": 0,
      "playing_now": false,
      "track_metadata": Object {
        "additional_info": Object {
          "artist_mbids": Array [
            "xxxx",
          ],
          "duration_ms": 123000,
          "recording_mbid": "yyyy",
          "recording_msid": "bar",
          "release_mbid": "foo",
        },
        "artist_name": "Moondog",
        "track_name": "Bird's Lament",
      },
      "user_name": "test",
    }
  }
  showTimestamp={true}
  showUsername={true}
  updateFeedbackCallback={[Function]}
>
  <ForwardRef
    className="listen-card   "
    onDoubleClick={[Function]}
  >
    <div
      className="card listen-card   "
      onDoubleClick={[Function]}
    >
      <div
        className="main-content"
      >
        <a
          className="listen-thumbnail"
          href="https://musicbrainz.org/release/foo/cover-art"
          rel="noopener noreferrer"
          target="_blank"
          title="Add cover art in MusicBrainz"
        >
          <div
            className="add-cover-art"
          >
            <img
              alt="Add cover art in MusicBrainz"
              src="/static/img/add-cover-art.svg"
            />
          </div>
        </a>
        <div
          className="listen-details"
        >
          <div
            className="title-duration"
          >
            <div
              className="ellipsis-2-lines"
              title="Bird's Lament"
            >
              <a
                href="https://musicbrainz.org/recording/yyyy"
                rel="noopener noreferrer"
                target="_blank"
              >
                Bird's Lament
              </a>
            </div>
            <div
              className="small text-muted"
              title="Duration"
            >
              2:03
            </div>
          </div>
          <div
            className="small text-muted ellipsis"
            title="Moondog"
          >
            <a
              href="https://musicbrainz.org/artist/xxxx"
              rel="noopener noreferrer"
              target="_blank"
            >
              Moondog
            </a>
          </div>
        </div>
        <div
          className="right-section"
        >
          <div
            className="username-and-timestamp"
          >
            <a
              href="/user/test"
              rel="noopener noreferrer"
              target="_blank"
              title="test"
            >
              test
            </a>
            <span
              className="listen-time"
              title=""
            >
              Jan 01, 1970, 1:00 AM
            </span>
          </div>
          <div
            className="listen-controls"
          >
            <FontAwesomeIcon
              aria-expanded="true"
              aria-haspopup="true"
              border={false}
              className="dropdown-toggle"
              data-toggle="dropdown"
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    192,
                    512,
                    Array [],
                    "f142",
                    "M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z",
                  ],
                  "iconName": "ellipsis-v",
                  "prefix": "fas",
                }
              }
              id="listenControlsDropdown"
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              swapOpacity={false}
              symbol={false}
              title="More actions"
              transform={null}
            >
              <svg
                aria-expanded="true"
                aria-haspopup="true"
                aria-labelledby="svg-inline--fa-title-000000000000"
                className="svg-inline--fa fa-ellipsis-v fa-w-6 dropdown-toggle"
                data-icon="ellipsis-v"
                data-prefix="fas"
                data-toggle="dropdown"
                id="listenControlsDropdown"
                role="img"
                style={Object {}}
                viewBox="0 0 192 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-000000000000"
                  style={Object {}}
                >
                  More actions
                </title>
                <path
                  d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </FontAwesomeIcon>
            <ul
              aria-labelledby="listenControlsDropdown"
              className="dropdown-menu dropdown-menu-right"
            >
              <ListenControl
                anchorTagAttributes={
                  Object {
                    "rel": "noopener noreferrer",
                    "target": "_blank",
                  }
                }
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [],
                      "f35d",
                      "M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z",
                    ],
                    "iconName": "external-link-alt",
                    "prefix": "fas",
                  }
                }
                link="https://musicbrainz.org/recording/yyyy"
                text="Open in MusicBrainz"
                title="Open in MusicBrainz"
              >
                <a
                  aria-label="Open in MusicBrainz"
                  href="https://musicbrainz.org/recording/yyyy"
                  rel="noopener noreferrer"
                  target="_blank"
                  title="Open in MusicBrainz"
                >
                  <FontAwesomeIcon
                    border={false}
                    className=""
                    fixedWidth={false}
                    flip={null}
                    icon={
                      Object {
                        "icon": Array [
                          512,
                          512,
                          Array [],
                          "f35d",
                          "M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z",
                        ],
                        "iconName": "external-link-alt",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    size={null}
                    spin={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-external-link-alt fa-w-16 "
                      data-icon="external-link-alt"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                   
                  Open in MusicBrainz
                </a>
              </ListenControl>
              <ListenControl
                action={[Function]}
                dataTarget="#ListenPayloadModal"
                dataToggle="modal"
                icon={
                  Object {
                    "icon": Array [
                      640,
                      512,
                      Array [],
                      "f121",
                      "M278.9 511.5l-61-17.7c-6.4-1.8-10-8.5-8.2-14.9L346.2 8.7c1.8-6.4 8.5-10 14.9-8.2l61 17.7c6.4 1.8 10 8.5 8.2 14.9L293.8 503.3c-1.9 6.4-8.5 10.1-14.9 8.2zm-114-112.2l43.5-46.4c4.6-4.9 4.3-12.7-.8-17.2L117 256l90.6-79.7c5.1-4.5 5.5-12.3.8-17.2l-43.5-46.4c-4.5-4.8-12.1-5.1-17-.5L3.8 247.2c-5.1 4.7-5.1 12.8 0 17.5l144.1 135.1c4.9 4.6 12.5 4.4 17-.5zm327.2.6l144.1-135.1c5.1-4.7 5.1-12.8 0-17.5L492.1 112.1c-4.8-4.5-12.4-4.3-17 .5L431.6 159c-4.6 4.9-4.3 12.7.8 17.2L523 256l-90.6 79.7c-5.1 4.5-5.5 12.3-.8 17.2l43.5 46.4c4.5 4.9 12.1 5.1 17 .6z",
                    ],
                    "iconName": "code",
                    "prefix": "fas",
                  }
                }
                text="Inspect listen"
              >
                <button
                  aria-label="Inspect listen"
                  data-target="#ListenPayloadModal"
                  data-toggle="modal"
                  disabled={false}
                  onClick={[Function]}
                  role="menuitem"
                  title="Inspect listen"
                  type="button"
                >
                  <FontAwesomeIcon
                    border={false}
                    className=""
                    fixedWidth={false}
                    flip={null}
                    icon={
                      Object {
                        "icon": Array [
                          640,
                          512,
                          Array [],
                          "f121",
                          "M278.9 511.5l-61-17.7c-6.4-1.8-10-8.5-8.2-14.9L346.2 8.7c1.8-6.4 8.5-10 14.9-8.2l61 17.7c6.4 1.8 10 8.5 8.2 14.9L293.8 503.3c-1.9 6.4-8.5 10.1-14.9 8.2zm-114-112.2l43.5-46.4c4.6-4.9 4.3-12.7-.8-17.2L117 256l90.6-79.7c5.1-4.5 5.5-12.3.8-17.2l-43.5-46.4c-4.5-4.8-12.1-5.1-17-.5L3.8 247.2c-5.1 4.7-5.1 12.8 0 17.5l144.1 135.1c4.9 4.6 12.5 4.4 17-.5zm327.2.6l144.1-135.1c5.1-4.7 5.1-12.8 0-17.5L492.1 112.1c-4.8-4.5-12.4-4.3-17 .5L431.6 159c-4.6 4.9-4.3 12.7.8 17.2L523 256l-90.6 79.7c-5.1 4.5-5.5 12.3-.8 17.2l43.5 46.4c4.5 4.9 12.1 5.1 17 .6z",
                        ],
                        "iconName": "code",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    size={null}
                    spin={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-code fa-w-20 "
                      data-icon="code"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 640 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M278.9 511.5l-61-17.7c-6.4-1.8-10-8.5-8.2-14.9L346.2 8.7c1.8-6.4 8.5-10 14.9-8.2l61 17.7c6.4 1.8 10 8.5 8.2 14.9L293.8 503.3c-1.9 6.4-8.5 10.1-14.9 8.2zm-114-112.2l43.5-46.4c4.6-4.9 4.3-12.7-.8-17.2L117 256l90.6-79.7c5.1-4.5 5.5-12.3.8-17.2l-43.5-46.4c-4.5-4.8-12.1-5.1-17-.5L3.8 247.2c-5.1 4.7-5.1 12.8 0 17.5l144.1 135.1c4.9 4.6 12.5 4.4 17-.5zm327.2.6l144.1-135.1c5.1-4.7 5.1-12.8 0-17.5L492.1 112.1c-4.8-4.5-12.4-4.3-17 .5L431.6 159c-4.6 4.9-4.3 12.7.8 17.2L523 256l-90.6 79.7c-5.1 4.5-5.5 12.3-.8 17.2l43.5 46.4c4.5 4.9 12.1 5.1 17 .6z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                   
                  Inspect listen
                </button>
              </ListenControl>
            </ul>
            <button
              className="btn-transparent play-button"
              onClick={[Function]}
              title="Play"
              type="button"
            >
              <FontAwesomeIcon
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [],
                      "f144",
                      "M371.7 238l-176-107c-15.8-8.8-35.7 2.5-35.7 21v208c0 18.4 19.8 29.8 35.7 21l176-101c16.4-9.1 16.4-32.8 0-42zM504 256C504 119 393 8 256 8S8 119 8 256s111 248 248 248 248-111 248-248zm-448 0c0-110.5 89.5-200 200-200s200 89.5 200 200-89.5 200-200 200S56 366.5 56 256z",
                    ],
                    "iconName": "play-circle",
                    "prefix": "far",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size="2x"
                spin={false}
                swapOpacity={false}
                symbol={false}
                title=""
                transform={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-play-circle fa-w-16 fa-2x "
                  data-icon="play-circle"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M371.7 238l-176-107c-15.8-8.8-35.7 2.5-35.7 21v208c0 18.4 19.8 29.8 35.7 21l176-101c16.4-9.1 16.4-32.8 0-42zM504 256C504 119 393 8 256 8S8 119 8 256s111 248 248 248 248-111 248-248zm-448 0c0-110.5 89.5-200 200-200s200 89.5 200 200-89.5 200-200 200S56 366.5 56 256z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </FontAwesomeIcon>
            </button>
          </div>
        </div>
      </div>
    </div>
  </ForwardRef>
</ListenCard>
`;

exports[`ListenCard renders correctly for playing_now listen 1`] = `
<ListenCard
  currentFeedback={1}
  listen={
    Object {
      "listened_at": 0,
      "playing_now": true,
      "track_metadata": Object {
        "additional_info": Object {
          "artist_mbids": Array [
            "xxxx",
          ],
          "duration_ms": 123000,
          "recording_mbid": "yyyy",
          "release_mbid": "foo",
        },
        "artist_name": "Moondog",
        "track_name": "Bird's Lament",
      },
      "user_name": "test",
    }
  }
  showTimestamp={true}
  showUsername={true}
  updateFeedbackCallback={[Function]}
>
  <ForwardRef
    className="listen-card   "
    onDoubleClick={[Function]}
  >
    <div
      className="card listen-card   "
      onDoubleClick={[Function]}
    >
      <div
        className="main-content"
      >
        <a
          className="listen-thumbnail"
          href="https://musicbrainz.org/release/foo/cover-art"
          rel="noopener noreferrer"
          target="_blank"
          title="Add cover art in MusicBrainz"
        >
          <div
            className="add-cover-art"
          >
            <img
              alt="Add cover art in MusicBrainz"
              src="/static/img/add-cover-art.svg"
            />
          </div>
        </a>
        <div
          className="listen-details"
        >
          <div
            className="title-duration"
          >
            <div
              className="ellipsis-2-lines"
              title="Bird's Lament"
            >
              <a
                href="https://musicbrainz.org/recording/yyyy"
                rel="noopener noreferrer"
                target="_blank"
              >
                Bird's Lament
              </a>
            </div>
            <div
              className="small text-muted"
              title="Duration"
            >
              2:03
            </div>
          </div>
          <div
            className="small text-muted ellipsis"
            title="Moondog"
          >
            <a
              href="https://musicbrainz.org/artist/xxxx"
              rel="noopener noreferrer"
              target="_blank"
            >
              Moondog
            </a>
          </div>
        </div>
        <div
          className="right-section"
        >
          <div
            className="username-and-timestamp"
          >
            <a
              href="/user/test"
              rel="noopener noreferrer"
              target="_blank"
              title="test"
            >
              test
            </a>
            <span
              className="listen-time"
            >
              <a
                href="/listening-now/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <FontAwesomeIcon
                  border={false}
                  className=""
                  fixedWidth={false}
                  flip={null}
                  icon={
                    Object {
                      "icon": Array [
                        512,
                        512,
                        Array [],
                        "f001",
                        "M470.38 1.51L150.41 96A32 32 0 0 0 128 126.51v261.41A139 139 0 0 0 96 384c-53 0-96 28.66-96 64s43 64 96 64 96-28.66 96-64V214.32l256-75v184.61a138.4 138.4 0 0 0-32-3.93c-53 0-96 28.66-96 64s43 64 96 64 96-28.65 96-64V32a32 32 0 0 0-41.62-30.49z",
                      ],
                      "iconName": "music",
                      "prefix": "fas",
                    }
                  }
                  inverse={false}
                  listItem={false}
                  mask={null}
                  pull={null}
                  pulse={false}
                  rotation={null}
                  size={null}
                  spin={false}
                  swapOpacity={false}
                  symbol={false}
                  title=""
                  transform={null}
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-music fa-w-16 "
                    data-icon="music"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    style={Object {}}
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M470.38 1.51L150.41 96A32 32 0 0 0 128 126.51v261.41A139 139 0 0 0 96 384c-53 0-96 28.66-96 64s43 64 96 64 96-28.66 96-64V214.32l256-75v184.61a138.4 138.4 0 0 0-32-3.93c-53 0-96 28.66-96 64s43 64 96 64 96-28.65 96-64V32a32 32 0 0 0-41.62-30.49z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </FontAwesomeIcon>
                 Listening now —
              </a>
            </span>
          </div>
          <div
            className="listen-controls"
          >
            <ListenFeedbackComponent
              currentFeedback={1}
              listen={
                Object {
                  "listened_at": 0,
                  "playing_now": true,
                  "track_metadata": Object {
                    "additional_info": Object {
                      "artist_mbids": Array [
                        "xxxx",
                      ],
                      "duration_ms": 123000,
                      "recording_mbid": "yyyy",
                      "release_mbid": "foo",
                    },
                    "artist_name": "Moondog",
                    "track_name": "Bird's Lament",
                  },
                  "user_name": "test",
                }
              }
              updateFeedbackCallback={[Function]}
            >
              <FontAwesomeIcon
                border={false}
                className=" loved"
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [],
                      "f004",
                      "M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z",
                    ],
                    "iconName": "heart",
                    "prefix": "fas",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                onClick={[Function]}
                pull={null}
                pulse={false}
                rotation={null}
                size={null}
                spin={false}
                swapOpacity={false}
                symbol={false}
                title="Love"
                transform={null}
              >
                <svg
                  aria-labelledby="svg-inline--fa-title-000000000000"
                  className="svg-inline--fa fa-heart fa-w-16  loved"
                  data-icon="heart"
                  data-prefix="fas"
                  onClick={[Function]}
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="svg-inline--fa-title-000000000000"
                    style={Object {}}
                  >
                    Love
                  </title>
                  <path
                    d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </FontAwesomeIcon>
              <FontAwesomeIcon
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [],
                      "f7a9",
                      "M473.7 73.8l-2.4-2.5c-46-47-118-51.7-169.6-14.8L336 159.9l-96 64 48 128-144-144 96-64-28.6-86.5C159.7 19.6 87 24 40.7 71.4l-2.4 2.4C-10.4 123.6-12.5 202.9 31 256l212.1 218.6c7.1 7.3 18.6 7.3 25.7 0L481 255.9c43.5-53 41.4-132.3-7.3-182.1z",
                    ],
                    "iconName": "heart-broken",
                    "prefix": "fas",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                onClick={[Function]}
                pull={null}
                pulse={false}
                rotation={null}
                size={null}
                spin={false}
                swapOpacity={false}
                symbol={false}
                title="Hate"
                transform={null}
              >
                <svg
                  aria-labelledby="svg-inline--fa-title-000000000000"
                  className="svg-inline--fa fa-heart-broken fa-w-16 "
                  data-icon="heart-broken"
                  data-prefix="fas"
                  onClick={[Function]}
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="svg-inline--fa-title-000000000000"
                    style={Object {}}
                  >
                    Hate
                  </title>
                  <path
                    d="M473.7 73.8l-2.4-2.5c-46-47-118-51.7-169.6-14.8L336 159.9l-96 64 48 128-144-144 96-64-28.6-86.5C159.7 19.6 87 24 40.7 71.4l-2.4 2.4C-10.4 123.6-12.5 202.9 31 256l212.1 218.6c7.1 7.3 18.6 7.3 25.7 0L481 255.9c43.5-53 41.4-132.3-7.3-182.1z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </FontAwesomeIcon>
            </ListenFeedbackComponent>
            <FontAwesomeIcon
              aria-expanded="true"
              aria-haspopup="true"
              border={false}
              className="dropdown-toggle"
              data-toggle="dropdown"
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    192,
                    512,
                    Array [],
                    "f142",
                    "M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z",
                  ],
                  "iconName": "ellipsis-v",
                  "prefix": "fas",
                }
              }
              id="listenControlsDropdown"
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              swapOpacity={false}
              symbol={false}
              title="More actions"
              transform={null}
            >
              <svg
                aria-expanded="true"
                aria-haspopup="true"
                aria-labelledby="svg-inline--fa-title-000000000000"
                className="svg-inline--fa fa-ellipsis-v fa-w-6 dropdown-toggle"
                data-icon="ellipsis-v"
                data-prefix="fas"
                data-toggle="dropdown"
                id="listenControlsDropdown"
                role="img"
                style={Object {}}
                viewBox="0 0 192 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-000000000000"
                  style={Object {}}
                >
                  More actions
                </title>
                <path
                  d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </FontAwesomeIcon>
            <ul
              aria-labelledby="listenControlsDropdown"
              className="dropdown-menu dropdown-menu-right"
            >
              <ListenControl
                anchorTagAttributes={
                  Object {
                    "rel": "noopener noreferrer",
                    "target": "_blank",
                  }
                }
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [],
                      "f35d",
                      "M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z",
                    ],
                    "iconName": "external-link-alt",
                    "prefix": "fas",
                  }
                }
                link="https://musicbrainz.org/recording/yyyy"
                text="Open in MusicBrainz"
                title="Open in MusicBrainz"
              >
                <a
                  aria-label="Open in MusicBrainz"
                  href="https://musicbrainz.org/recording/yyyy"
                  rel="noopener noreferrer"
                  target="_blank"
                  title="Open in MusicBrainz"
                >
                  <FontAwesomeIcon
                    border={false}
                    className=""
                    fixedWidth={false}
                    flip={null}
                    icon={
                      Object {
                        "icon": Array [
                          512,
                          512,
                          Array [],
                          "f35d",
                          "M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z",
                        ],
                        "iconName": "external-link-alt",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    size={null}
                    spin={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-external-link-alt fa-w-16 "
                      data-icon="external-link-alt"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                   
                  Open in MusicBrainz
                </a>
              </ListenControl>
              <ListenControl
                action={[Function]}
                dataTarget="#PinRecordingModal"
                dataToggle="modal"
                icon={
                  Object {
                    "icon": Array [
                      384,
                      512,
                      Array [],
                      "f08d",
                      "M298.028 214.267L285.793 96H328c13.255 0 24-10.745 24-24V24c0-13.255-10.745-24-24-24H56C42.745 0 32 10.745 32 24v48c0 13.255 10.745 24 24 24h42.207L85.972 214.267C37.465 236.82 0 277.261 0 328c0 13.255 10.745 24 24 24h136v104.007c0 1.242.289 2.467.845 3.578l24 48c2.941 5.882 11.364 5.893 14.311 0l24-48a8.008 8.008 0 0 0 .845-3.578V352h136c13.255 0 24-10.745 24-24-.001-51.183-37.983-91.42-85.973-113.733z",
                    ],
                    "iconName": "thumbtack",
                    "prefix": "fas",
                  }
                }
                text="Pin this track"
              >
                <button
                  aria-label="Pin this track"
                  data-target="#PinRecordingModal"
                  data-toggle="modal"
                  disabled={false}
                  onClick={[Function]}
                  role="menuitem"
                  title="Pin this track"
                  type="button"
                >
                  <FontAwesomeIcon
                    border={false}
                    className=""
                    fixedWidth={false}
                    flip={null}
                    icon={
                      Object {
                        "icon": Array [
                          384,
                          512,
                          Array [],
                          "f08d",
                          "M298.028 214.267L285.793 96H328c13.255 0 24-10.745 24-24V24c0-13.255-10.745-24-24-24H56C42.745 0 32 10.745 32 24v48c0 13.255 10.745 24 24 24h42.207L85.972 214.267C37.465 236.82 0 277.261 0 328c0 13.255 10.745 24 24 24h136v104.007c0 1.242.289 2.467.845 3.578l24 48c2.941 5.882 11.364 5.893 14.311 0l24-48a8.008 8.008 0 0 0 .845-3.578V352h136c13.255 0 24-10.745 24-24-.001-51.183-37.983-91.42-85.973-113.733z",
                        ],
                        "iconName": "thumbtack",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    size={null}
                    spin={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-thumbtack fa-w-12 "
                      data-icon="thumbtack"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 384 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M298.028 214.267L285.793 96H328c13.255 0 24-10.745 24-24V24c0-13.255-10.745-24-24-24H56C42.745 0 32 10.745 32 24v48c0 13.255 10.745 24 24 24h42.207L85.972 214.267C37.465 236.82 0 277.261 0 328c0 13.255 10.745 24 24 24h136v104.007c0 1.242.289 2.467.845 3.578l24 48c2.941 5.882 11.364 5.893 14.311 0l24-48a8.008 8.008 0 0 0 .845-3.578V352h136c13.255 0 24-10.745 24-24-.001-51.183-37.983-91.42-85.973-113.733z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                   
                  Pin this track
                </button>
              </ListenControl>
              <ListenControl
                action={[Function]}
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [],
                      "f4ad",
                      "M256 32C114.6 32 0 125.1 0 240c0 49.6 21.4 95 57 130.7C44.5 421.1 2.7 466 2.2 466.5c-2.2 2.3-2.8 5.7-1.5 8.7S4.8 480 8 480c66.3 0 116-31.8 140.6-51.4 32.7 12.3 69 19.4 107.4 19.4 141.4 0 256-93.1 256-208S397.4 32 256 32zM128 272c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm128 0c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm128 0c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32z",
                    ],
                    "iconName": "comment-dots",
                    "prefix": "fas",
                  }
                }
                text="Recommend to my followers"
                title="Recommend to my followers"
              >
                <button
                  aria-label="Recommend to my followers"
                  disabled={false}
                  onClick={[Function]}
                  role="menuitem"
                  title="Recommend to my followers"
                  type="button"
                >
                  <FontAwesomeIcon
                    border={false}
                    className=""
                    fixedWidth={false}
                    flip={null}
                    icon={
                      Object {
                        "icon": Array [
                          512,
                          512,
                          Array [],
                          "f4ad",
                          "M256 32C114.6 32 0 125.1 0 240c0 49.6 21.4 95 57 130.7C44.5 421.1 2.7 466 2.2 466.5c-2.2 2.3-2.8 5.7-1.5 8.7S4.8 480 8 480c66.3 0 116-31.8 140.6-51.4 32.7 12.3 69 19.4 107.4 19.4 141.4 0 256-93.1 256-208S397.4 32 256 32zM128 272c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm128 0c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm128 0c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32z",
                        ],
                        "iconName": "comment-dots",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    size={null}
                    spin={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-comment-dots fa-w-16 "
                      data-icon="comment-dots"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M256 32C114.6 32 0 125.1 0 240c0 49.6 21.4 95 57 130.7C44.5 421.1 2.7 466 2.2 466.5c-2.2 2.3-2.8 5.7-1.5 8.7S4.8 480 8 480c66.3 0 116-31.8 140.6-51.4 32.7 12.3 69 19.4 107.4 19.4 141.4 0 256-93.1 256-208S397.4 32 256 32zM128 272c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm128 0c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm128 0c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                   
                  Recommend to my followers
                </button>
              </ListenControl>
              <ListenControl
                action={[Function]}
                dataTarget="#PersonalRecommendationModal"
                dataToggle="modal"
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [],
                      "f1d8",
                      "M476 3.2L12.5 270.6c-18.1 10.4-15.8 35.6 2.2 43.2L121 358.4l287.3-253.2c5.5-4.9 13.3 2.6 8.6 8.3L176 407v80.5c0 23.6 28.5 32.9 42.5 15.8L282 426l124.6 52.2c14.2 6 30.4-2.9 33-18.2l72-432C515 7.8 493.3-6.8 476 3.2z",
                    ],
                    "iconName": "paper-plane",
                    "prefix": "fas",
                  }
                }
                text="Personally recommend"
              >
                <button
                  aria-label="Personally recommend"
                  data-target="#PersonalRecommendationModal"
                  data-toggle="modal"
                  disabled={false}
                  onClick={[Function]}
                  role="menuitem"
                  title="Personally recommend"
                  type="button"
                >
                  <FontAwesomeIcon
                    border={false}
                    className=""
                    fixedWidth={false}
                    flip={null}
                    icon={
                      Object {
                        "icon": Array [
                          512,
                          512,
                          Array [],
                          "f1d8",
                          "M476 3.2L12.5 270.6c-18.1 10.4-15.8 35.6 2.2 43.2L121 358.4l287.3-253.2c5.5-4.9 13.3 2.6 8.6 8.3L176 407v80.5c0 23.6 28.5 32.9 42.5 15.8L282 426l124.6 52.2c14.2 6 30.4-2.9 33-18.2l72-432C515 7.8 493.3-6.8 476 3.2z",
                        ],
                        "iconName": "paper-plane",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    size={null}
                    spin={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-paper-plane fa-w-16 "
                      data-icon="paper-plane"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M476 3.2L12.5 270.6c-18.1 10.4-15.8 35.6 2.2 43.2L121 358.4l287.3-253.2c5.5-4.9 13.3 2.6 8.6 8.3L176 407v80.5c0 23.6 28.5 32.9 42.5 15.8L282 426l124.6 52.2c14.2 6 30.4-2.9 33-18.2l72-432C515 7.8 493.3-6.8 476 3.2z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                   
                  Personally recommend
                </button>
              </ListenControl>
              <ListenControl
                action={[Function]}
                dataTarget="#CBReviewModal"
                dataToggle="modal"
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [],
                      "f303",
                      "M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z",
                    ],
                    "iconName": "pencil-alt",
                    "prefix": "fas",
                  }
                }
                text="Write a review"
              >
                <button
                  aria-label="Write a review"
                  data-target="#CBReviewModal"
                  data-toggle="modal"
                  disabled={false}
                  onClick={[Function]}
                  role="menuitem"
                  title="Write a review"
                  type="button"
                >
                  <FontAwesomeIcon
                    border={false}
                    className=""
                    fixedWidth={false}
                    flip={null}
                    icon={
                      Object {
                        "icon": Array [
                          512,
                          512,
                          Array [],
                          "f303",
                          "M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z",
                        ],
                        "iconName": "pencil-alt",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    size={null}
                    spin={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-pencil-alt fa-w-16 "
                      data-icon="pencil-alt"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                   
                  Write a review
                </button>
              </ListenControl>
              <ListenControl
                action={[Function]}
                dataTarget="#ListenPayloadModal"
                dataToggle="modal"
                icon={
                  Object {
                    "icon": Array [
                      640,
                      512,
                      Array [],
                      "f121",
                      "M278.9 511.5l-61-17.7c-6.4-1.8-10-8.5-8.2-14.9L346.2 8.7c1.8-6.4 8.5-10 14.9-8.2l61 17.7c6.4 1.8 10 8.5 8.2 14.9L293.8 503.3c-1.9 6.4-8.5 10.1-14.9 8.2zm-114-112.2l43.5-46.4c4.6-4.9 4.3-12.7-.8-17.2L117 256l90.6-79.7c5.1-4.5 5.5-12.3.8-17.2l-43.5-46.4c-4.5-4.8-12.1-5.1-17-.5L3.8 247.2c-5.1 4.7-5.1 12.8 0 17.5l144.1 135.1c4.9 4.6 12.5 4.4 17-.5zm327.2.6l144.1-135.1c5.1-4.7 5.1-12.8 0-17.5L492.1 112.1c-4.8-4.5-12.4-4.3-17 .5L431.6 159c-4.6 4.9-4.3 12.7.8 17.2L523 256l-90.6 79.7c-5.1 4.5-5.5 12.3-.8 17.2l43.5 46.4c4.5 4.9 12.1 5.1 17 .6z",
                    ],
                    "iconName": "code",
                    "prefix": "fas",
                  }
                }
                text="Inspect listen"
              >
                <button
                  aria-label="Inspect listen"
                  data-target="#ListenPayloadModal"
                  data-toggle="modal"
                  disabled={false}
                  onClick={[Function]}
                  role="menuitem"
                  title="Inspect listen"
                  type="button"
                >
                  <FontAwesomeIcon
                    border={false}
                    className=""
                    fixedWidth={false}
                    flip={null}
                    icon={
                      Object {
                        "icon": Array [
                          640,
                          512,
                          Array [],
                          "f121",
                          "M278.9 511.5l-61-17.7c-6.4-1.8-10-8.5-8.2-14.9L346.2 8.7c1.8-6.4 8.5-10 14.9-8.2l61 17.7c6.4 1.8 10 8.5 8.2 14.9L293.8 503.3c-1.9 6.4-8.5 10.1-14.9 8.2zm-114-112.2l43.5-46.4c4.6-4.9 4.3-12.7-.8-17.2L117 256l90.6-79.7c5.1-4.5 5.5-12.3.8-17.2l-43.5-46.4c-4.5-4.8-12.1-5.1-17-.5L3.8 247.2c-5.1 4.7-5.1 12.8 0 17.5l144.1 135.1c4.9 4.6 12.5 4.4 17-.5zm327.2.6l144.1-135.1c5.1-4.7 5.1-12.8 0-17.5L492.1 112.1c-4.8-4.5-12.4-4.3-17 .5L431.6 159c-4.6 4.9-4.3 12.7.8 17.2L523 256l-90.6 79.7c-5.1 4.5-5.5 12.3-.8 17.2l43.5 46.4c4.5 4.9 12.1 5.1 17 .6z",
                        ],
                        "iconName": "code",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    size={null}
                    spin={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-code fa-w-20 "
                      data-icon="code"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 640 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M278.9 511.5l-61-17.7c-6.4-1.8-10-8.5-8.2-14.9L346.2 8.7c1.8-6.4 8.5-10 14.9-8.2l61 17.7c6.4 1.8 10 8.5 8.2 14.9L293.8 503.3c-1.9 6.4-8.5 10.1-14.9 8.2zm-114-112.2l43.5-46.4c4.6-4.9 4.3-12.7-.8-17.2L117 256l90.6-79.7c5.1-4.5 5.5-12.3.8-17.2l-43.5-46.4c-4.5-4.8-12.1-5.1-17-.5L3.8 247.2c-5.1 4.7-5.1 12.8 0 17.5l144.1 135.1c4.9 4.6 12.5 4.4 17-.5zm327.2.6l144.1-135.1c5.1-4.7 5.1-12.8 0-17.5L492.1 112.1c-4.8-4.5-12.4-4.3-17 .5L431.6 159c-4.6 4.9-4.3 12.7.8 17.2L523 256l-90.6 79.7c-5.1 4.5-5.5 12.3-.8 17.2l43.5 46.4c4.5 4.9 12.1 5.1 17 .6z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                   
                  Inspect listen
                </button>
              </ListenControl>
            </ul>
            <button
              className="btn-transparent play-button"
              onClick={[Function]}
              title="Play"
              type="button"
            >
              <FontAwesomeIcon
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [],
                      "f144",
                      "M371.7 238l-176-107c-15.8-8.8-35.7 2.5-35.7 21v208c0 18.4 19.8 29.8 35.7 21l176-101c16.4-9.1 16.4-32.8 0-42zM504 256C504 119 393 8 256 8S8 119 8 256s111 248 248 248 248-111 248-248zm-448 0c0-110.5 89.5-200 200-200s200 89.5 200 200-89.5 200-200 200S56 366.5 56 256z",
                    ],
                    "iconName": "play-circle",
                    "prefix": "far",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size="2x"
                spin={false}
                swapOpacity={false}
                symbol={false}
                title=""
                transform={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-play-circle fa-w-16 fa-2x "
                  data-icon="play-circle"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M371.7 238l-176-107c-15.8-8.8-35.7 2.5-35.7 21v208c0 18.4 19.8 29.8 35.7 21l176-101c16.4-9.1 16.4-32.8 0-42zM504 256C504 119 393 8 256 8S8 119 8 256s111 248 248 248 248-111 248-248zm-448 0c0-110.5 89.5-200 200-200s200 89.5 200 200-89.5 200-200 200S56 366.5 56 256z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </FontAwesomeIcon>
            </button>
          </div>
        </div>
      </div>
    </div>
  </ForwardRef>
</ListenCard>
`;

exports[`ListenCard should render timestamp using preciseTimestamp 1`] = `
<ListenCard
  currentFeedback={1}
  listen={
    Object {
      "listened_at": 0,
      "playing_now": false,
      "track_metadata": Object {
        "additional_info": Object {
          "artist_mbids": Array [
            "xxxx",
          ],
          "duration_ms": 123000,
          "recording_mbid": "yyyy",
          "recording_msid": "bar",
          "release_mbid": "foo",
        },
        "artist_name": "Moondog",
        "track_name": "Bird's Lament",
      },
      "user_name": "test",
    }
  }
  showTimestamp={true}
  showUsername={true}
  updateFeedbackCallback={[Function]}
>
  <ForwardRef
    className="listen-card   "
    onDoubleClick={[Function]}
  >
    <div
      className="card listen-card   "
      onDoubleClick={[Function]}
    >
      <div
        className="main-content"
      >
        <a
          className="listen-thumbnail"
          href="https://musicbrainz.org/release/foo/cover-art"
          rel="noopener noreferrer"
          target="_blank"
          title="Add cover art in MusicBrainz"
        >
          <div
            className="add-cover-art"
          >
            <img
              alt="Add cover art in MusicBrainz"
              src="/static/img/add-cover-art.svg"
            />
          </div>
        </a>
        <div
          className="listen-details"
        >
          <div
            className="title-duration"
          >
            <div
              className="ellipsis-2-lines"
              title="Bird's Lament"
            >
              <a
                href="https://musicbrainz.org/recording/yyyy"
                rel="noopener noreferrer"
                target="_blank"
              >
                Bird's Lament
              </a>
            </div>
            <div
              className="small text-muted"
              title="Duration"
            >
              2:03
            </div>
          </div>
          <div
            className="small text-muted ellipsis"
            title="Moondog"
          >
            <a
              href="https://musicbrainz.org/artist/xxxx"
              rel="noopener noreferrer"
              target="_blank"
            >
              Moondog
            </a>
          </div>
        </div>
        <div
          className="right-section"
        >
          <div
            className="username-and-timestamp"
          >
            <a
              href="/user/test"
              rel="noopener noreferrer"
              target="_blank"
              title="test"
            >
              test
            </a>
            <span
              className="listen-time"
              title=""
            >
              Jan 01, 1970, 1:00 AM
            </span>
          </div>
          <div
            className="listen-controls"
          >
            <FontAwesomeIcon
              aria-expanded="true"
              aria-haspopup="true"
              border={false}
              className="dropdown-toggle"
              data-toggle="dropdown"
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    192,
                    512,
                    Array [],
                    "f142",
                    "M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z",
                  ],
                  "iconName": "ellipsis-v",
                  "prefix": "fas",
                }
              }
              id="listenControlsDropdown"
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              swapOpacity={false}
              symbol={false}
              title="More actions"
              transform={null}
            >
              <svg
                aria-expanded="true"
                aria-haspopup="true"
                aria-labelledby="svg-inline--fa-title-000000000000"
                className="svg-inline--fa fa-ellipsis-v fa-w-6 dropdown-toggle"
                data-icon="ellipsis-v"
                data-prefix="fas"
                data-toggle="dropdown"
                id="listenControlsDropdown"
                role="img"
                style={Object {}}
                viewBox="0 0 192 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="svg-inline--fa-title-000000000000"
                  style={Object {}}
                >
                  More actions
                </title>
                <path
                  d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </FontAwesomeIcon>
            <ul
              aria-labelledby="listenControlsDropdown"
              className="dropdown-menu dropdown-menu-right"
            >
              <ListenControl
                anchorTagAttributes={
                  Object {
                    "rel": "noopener noreferrer",
                    "target": "_blank",
                  }
                }
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [],
                      "f35d",
                      "M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z",
                    ],
                    "iconName": "external-link-alt",
                    "prefix": "fas",
                  }
                }
                link="https://musicbrainz.org/recording/yyyy"
                text="Open in MusicBrainz"
                title="Open in MusicBrainz"
              >
                <a
                  aria-label="Open in MusicBrainz"
                  href="https://musicbrainz.org/recording/yyyy"
                  rel="noopener noreferrer"
                  target="_blank"
                  title="Open in MusicBrainz"
                >
                  <FontAwesomeIcon
                    border={false}
                    className=""
                    fixedWidth={false}
                    flip={null}
                    icon={
                      Object {
                        "icon": Array [
                          512,
                          512,
                          Array [],
                          "f35d",
                          "M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z",
                        ],
                        "iconName": "external-link-alt",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    size={null}
                    spin={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-external-link-alt fa-w-16 "
                      data-icon="external-link-alt"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                   
                  Open in MusicBrainz
                </a>
              </ListenControl>
              <ListenControl
                action={[Function]}
                dataTarget="#ListenPayloadModal"
                dataToggle="modal"
                icon={
                  Object {
                    "icon": Array [
                      640,
                      512,
                      Array [],
                      "f121",
                      "M278.9 511.5l-61-17.7c-6.4-1.8-10-8.5-8.2-14.9L346.2 8.7c1.8-6.4 8.5-10 14.9-8.2l61 17.7c6.4 1.8 10 8.5 8.2 14.9L293.8 503.3c-1.9 6.4-8.5 10.1-14.9 8.2zm-114-112.2l43.5-46.4c4.6-4.9 4.3-12.7-.8-17.2L117 256l90.6-79.7c5.1-4.5 5.5-12.3.8-17.2l-43.5-46.4c-4.5-4.8-12.1-5.1-17-.5L3.8 247.2c-5.1 4.7-5.1 12.8 0 17.5l144.1 135.1c4.9 4.6 12.5 4.4 17-.5zm327.2.6l144.1-135.1c5.1-4.7 5.1-12.8 0-17.5L492.1 112.1c-4.8-4.5-12.4-4.3-17 .5L431.6 159c-4.6 4.9-4.3 12.7.8 17.2L523 256l-90.6 79.7c-5.1 4.5-5.5 12.3-.8 17.2l43.5 46.4c4.5 4.9 12.1 5.1 17 .6z",
                    ],
                    "iconName": "code",
                    "prefix": "fas",
                  }
                }
                text="Inspect listen"
              >
                <button
                  aria-label="Inspect listen"
                  data-target="#ListenPayloadModal"
                  data-toggle="modal"
                  disabled={false}
                  onClick={[Function]}
                  role="menuitem"
                  title="Inspect listen"
                  type="button"
                >
                  <FontAwesomeIcon
                    border={false}
                    className=""
                    fixedWidth={false}
                    flip={null}
                    icon={
                      Object {
                        "icon": Array [
                          640,
                          512,
                          Array [],
                          "f121",
                          "M278.9 511.5l-61-17.7c-6.4-1.8-10-8.5-8.2-14.9L346.2 8.7c1.8-6.4 8.5-10 14.9-8.2l61 17.7c6.4 1.8 10 8.5 8.2 14.9L293.8 503.3c-1.9 6.4-8.5 10.1-14.9 8.2zm-114-112.2l43.5-46.4c4.6-4.9 4.3-12.7-.8-17.2L117 256l90.6-79.7c5.1-4.5 5.5-12.3.8-17.2l-43.5-46.4c-4.5-4.8-12.1-5.1-17-.5L3.8 247.2c-5.1 4.7-5.1 12.8 0 17.5l144.1 135.1c4.9 4.6 12.5 4.4 17-.5zm327.2.6l144.1-135.1c5.1-4.7 5.1-12.8 0-17.5L492.1 112.1c-4.8-4.5-12.4-4.3-17 .5L431.6 159c-4.6 4.9-4.3 12.7.8 17.2L523 256l-90.6 79.7c-5.1 4.5-5.5 12.3-.8 17.2l43.5 46.4c4.5 4.9 12.1 5.1 17 .6z",
                        ],
                        "iconName": "code",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    size={null}
                    spin={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-code fa-w-20 "
                      data-icon="code"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 640 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M278.9 511.5l-61-17.7c-6.4-1.8-10-8.5-8.2-14.9L346.2 8.7c1.8-6.4 8.5-10 14.9-8.2l61 17.7c6.4 1.8 10 8.5 8.2 14.9L293.8 503.3c-1.9 6.4-8.5 10.1-14.9 8.2zm-114-112.2l43.5-46.4c4.6-4.9 4.3-12.7-.8-17.2L117 256l90.6-79.7c5.1-4.5 5.5-12.3.8-17.2l-43.5-46.4c-4.5-4.8-12.1-5.1-17-.5L3.8 247.2c-5.1 4.7-5.1 12.8 0 17.5l144.1 135.1c4.9 4.6 12.5 4.4 17-.5zm327.2.6l144.1-135.1c5.1-4.7 5.1-12.8 0-17.5L492.1 112.1c-4.8-4.5-12.4-4.3-17 .5L431.6 159c-4.6 4.9-4.3 12.7.8 17.2L523 256l-90.6 79.7c-5.1 4.5-5.5 12.3-.8 17.2l43.5 46.4c4.5 4.9 12.1 5.1 17 .6z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                   
                  Inspect listen
                </button>
              </ListenControl>
            </ul>
            <button
              className="btn-transparent play-button"
              onClick={[Function]}
              title="Play"
              type="button"
            >
              <FontAwesomeIcon
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      512,
                      512,
                      Array [],
                      "f144",
                      "M371.7 238l-176-107c-15.8-8.8-35.7 2.5-35.7 21v208c0 18.4 19.8 29.8 35.7 21l176-101c16.4-9.1 16.4-32.8 0-42zM504 256C504 119 393 8 256 8S8 119 8 256s111 248 248 248 248-111 248-248zm-448 0c0-110.5 89.5-200 200-200s200 89.5 200 200-89.5 200-200 200S56 366.5 56 256z",
                    ],
                    "iconName": "play-circle",
                    "prefix": "far",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size="2x"
                spin={false}
                swapOpacity={false}
                symbol={false}
                title=""
                transform={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-play-circle fa-w-16 fa-2x "
                  data-icon="play-circle"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M371.7 238l-176-107c-15.8-8.8-35.7 2.5-35.7 21v208c0 18.4 19.8 29.8 35.7 21l176-101c16.4-9.1 16.4-32.8 0-42zM504 256C504 119 393 8 256 8S8 119 8 256s111 248 248 248 248-111 248-248zm-448 0c0-110.5 89.5-200 200-200s200 89.5 200 200-89.5 200-200 200S56 366.5 56 256z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </FontAwesomeIcon>
            </button>
          </div>
        </div>
      </div>
    </div>
  </ForwardRef>
</ListenCard>
`;
